Update hassio-to-pubsub to 0.2.0

--- a/hassio-to-pubsub/config.json
+++ b/hassio-to-pubsub/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Home Assistant to Pub/Sub",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "slug": "hassio-to-pubsub",
   "description": "Publishes Home Assistant events to Google Pub/Sub",
   "arch": ["aarch64"],
@@ -9,10 +9,26 @@
   "homeassistant_api": true,
   "options": {
     "house_id": null,
-    "service_account_json": null
+    "service_account_json": null,
+    "filter": {
+      "include_domains": [],
+      "exclude_domains": [],
+      "include_entity_globs": [],
+      "exclude_entity_globs": [],
+      "include_entities": [],
+      "exclude_entities": []
+    }
   },
   "schema": {
     "house_id": "str",
-    "service_account_json": "str"
+    "service_account_json": "str",
+    "filter": {
+      "include_domains": ["str"],
+      "exclude_domains": ["str"],
+      "include_entity_globs": ["str"],
+      "exclude_entity_globs": ["str"],
+      "include_entities": ["str"],
+      "exclude_entities": ["str"]
+    }
   }
 }
