--- a/hassio-to-pubsub/config.json
+++ b/hassio-to-pubsub/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Home Assistant to Pub/Sub",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "slug": "hassio-to-pubsub",
   "description": "Publishes Home Assistant events to Google Pub/Sub",
   "arch": ["aarch64"],
@@ -8,7 +8,7 @@
   "boot": "auto",
   "homeassistant_api": true,
   "options": {
-    "house_id": null,
+    "home_id": null,
     "service_account_json": null,
     "filter": {
       "include_domains": [],
@@ -20,7 +20,7 @@
     }
   },
   "schema": {
-    "house_id": "str",
+    "home_id": "str",
     "service_account_json": "str",
     "filter": {
       "include_domains": ["str"],
