--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: taylanselvi
-          password: AVnPwE3={RHG)Q*>2d;96^JCo8>866
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Publish
         uses: home-assistant/builder@master
         with:
           args: |
             --all \
             --target hello-a2i2 \
-            --docker-hub taylanselvi \
+            --docker-hub ${{ secrets.DOCKER_USERNAME }} \
             --image hello-a2i2
